--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
@@ -40,7 +41,10 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "nuxt-webfontloader": "^1.1.0",
     "prettier": "^2.0.5",
+    "sass-loader": "^9.0.2",
     "vue-jest": "^3.0.4"
   }
 }
