--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint": "yarn lint:js",
-    "test": "jest"
+    "lint": "yarn lint:js"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint"
@@ -24,7 +23,15 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "babel-runtime": "^6.26.0",
+    "child_process": "^1.0.2",
+    "detab": "^2.0.4",
+    "dgram": "^1.0.1",
+    "dns": "^0.2.2",
+    "fs": "0.0.1-security",
+    "net": "^1.0.2",
     "nuxt": "^2.14.0",
+    "tls": "0.0.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
@@ -34,18 +41,16 @@
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "node-sass": "^4.14.1",
     "nuxt-webfontloader": "^1.1.0",
     "prettier": "^2.0.5",
-    "sass-loader": "^9.0.2",
-    "vue-jest": "^3.0.4"
+    "sass-loader": "^9.0.2"
   }
 }
